<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="eus.ehu.adibidea.tta.apprendeus.LoginActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Erabiltzailea"/>

        <EditText
            android:id="@+id/erab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/Erabiltzailea_pista"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Pasahitza"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/Pasahitza_pista"
            android:password="true"/>

        <Button
            android:id="@+id/buttonlogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Botoia_sartu"
            tools:layout_editor_absoluteY="77dp"
            tools:layout_editor_absoluteX="16dp"
            android:onClick="login"/>

        <Button
            android:id="@+id/buttonsignin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Botoia_erregistratu"
            tools:layout_editor_absoluteY="77dp"
            tools:layout_editor_absoluteX="16dp"
            android:onClick="signIn"/>

    </GridLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Argazkia"
        tools:layout_editor_absoluteY="77dp"
        tools:layout_editor_absoluteX="16dp"
        android:onClick="argazkia"/>

</LinearLayout>

