<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="eus.ehu.adibidea.tta.apprendeus.Vista.Menu1Activity">

    <TextView
        android:id="@+id/menu_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20dp"
        android:text="@string/Aukeratu"/>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Botoia_A1"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="29dp"
        android:enabled="true"
        android:onClick="A1"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Botoia_A2"
        tools:layout_editor_absoluteY="77dp"
        tools:layout_editor_absoluteX="16dp"
        android:enabled="false"
        android:onClick="A2"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Botoia_B1"
        tools:layout_editor_absoluteY="125dp"
        tools:layout_editor_absoluteX="16dp"
        android:enabled="false"
        android:onClick="A3"/>

</LinearLayout>
